more brandingish pattern for logon + sp info

--- a/_includes/ucla-sso-form.html
+++ b/_includes/ucla-sso-form.html
@@ -13,13 +13,11 @@
 			</li>
 		</ol>
 	</fieldset>
-
+	
 	<fieldset class="sso-submit">
 		<button class="primary-button" type="submit" name="sso">Sign In</button>
 	</fieldset>
 	
-	<ul class="sso-links">
-		<li><a href="#">Get help with your password or UCLA logon ID.</a></li>
-	</ul>
+	<p class="sso-help"><a href="#">Get help with your account or password.</a></p>
 	
 </form>
