--- a/_includes/ucla-sso-form-disabled.html
+++ b/_includes/ucla-sso-form-disabled.html
@@ -18,8 +18,6 @@
 		<button class="primary-button" type="submit" name="sso" disabled>Sign In</button>
 	</fieldset>
 	
-	<ul class="sso-links">
-		<li><a href="#">Get help with your password or UCLA logon ID.</a></li>
-	</ul>
+	<p class="sso-help"><a href="#">Get help with your account or password.</a></p>
 	
 </form>
