--- a/_scss/_sso-styles.scss
+++ b/_scss/_sso-styles.scss
@@ -154,7 +154,7 @@ article {
 		font-size: $meta-font-size;
 	}
 	h3 {
-		font-size: $h4-font-size;
+		font-size: $p-font-size;
 		margin-top: 0;
 	}
 }
