--- a/_includes/ucla-sso-form-custom-sp.html
+++ b/_includes/ucla-sso-form-custom-sp.html
@@ -24,9 +24,10 @@
 	</form>
 	
 	<aside class="sp-news">
-		<h3>Lambda Lab</h3>
+		<h3>Common Collaboration & Learning Environment</h3>
 		
-		<p>If you're having issues with signing into Lambda Lab in particular, you can email them at <a href="#">foobar@ucla.edu</a> or give them a call at (310) 208-0448.</p>
-			
+		<p>You can use <a href="https://ccle.ucla.edu/login/ucla_login.php?loginguest=1">Guest Access</a> to visit publicly viewable sites or a <a href="https://ccle.ucla.edu/login/ucla_login.php">Special Case Login</a> if you have been assigned a special case ID.</p>
+		
+		 <p>If you're getting an error after a successful login your Logon ID might <a href="http://kb.ucla.edu/articles/moodle-needs-certain-shibboleth-attributes">not be working properly.</a></p>
 	</aside>
 </div>
