--- a/_scss/_sso-styles.scss
+++ b/_scss/_sso-styles.scss
@@ -116,8 +116,13 @@ article {
 	padding: 1em;
 }
 
+.form-container {
+	max-width: 920px;
+	margin-left: 40px;
+}
+
 #sso {
-	@include grid-span(2, 1);
+	@include grid-span(3, 1);
 	background: $body-background-color;
 	box-shadow: 0 1px 1px #347bad;
 	padding: 1em;
@@ -146,7 +151,7 @@ article {
 }
 
 .sp-news {
-	@include grid-span(1, 3);
+	@include grid-span(2, 4);
 	min-height: 245px;
 	background: rgba($neutral, .15);
 	padding: $default-spacing;
@@ -166,10 +171,10 @@ article {
 
 .error {
 	background: repeating-linear-gradient(45deg, $error-bg-color, $error-bg-color $half-spacing, $error-bg-color-alt $half-spacing, $error-bg-color-alt $default-spacing);
+	margin-top: -20px;
 	color: $error-color;
 	padding: $default-spacing;
 	margin-bottom: $default-spacing;
-	@include border-radius($global-border-radius);
 	h1 {
 		color: $error-color;
 	}
@@ -180,13 +185,12 @@ article {
 
 .alert {
 	background: $warning-bg-color;
+	margin-top: -20px;
 	color: $warning-color;
 	padding: $default-spacing;
 	margin-bottom: $default-spacing;
-	@include border-radius($global-border-radius);
 	h1 {
 		color: $warning-color;
-		margin: 0;
 	}
 }
 
@@ -202,7 +206,6 @@ article {
 		padding-left: 0;
 	}
 }
-
 
 footer[role="contentinfo"] {
 	position: absolute;
