--- a/_scss/_ucla-vars.scss
+++ b/_scss/_ucla-vars.scss
@@ -70,6 +70,7 @@ $body-text-color: #666;
 $body-background-color: $white;
 
 $font-stack: ProximaNova, Verdana, sans-serif;
+$global-letter-spacing: 0.5px;
 
 $anchor-font-color: $uclapurpleneon;
 $anchor-font-color-hover: #1e4b87;
@@ -93,7 +94,7 @@ $half-spacing: .5em;
 $default-spacing: 1em;
 $double-spacing: 2em;
 
-$global-border-radius: 3px;
+$global-border-radius: 4px;
 
 /////////////////////////////////////////
 ///           FONT FACE
