--- a/_includes/ucla-sso-form.html
+++ b/_includes/ucla-sso-form.html
@@ -1,5 +1,7 @@
 <form id="sso" role="form">
 	
+	<img src="/images/ucla.png" alt="UCLA" class="logo">
+	
 	<fieldset class="login-form">
 		<legend>Sign In with your UCLA Logon ID</legend>
 		<ol>
@@ -19,8 +21,8 @@
 	</fieldset>
 	
 	<ul class="sso-links">
-		<li><a href="#">Reset your Password</a></li>
-		<li><a href="#">Get a Logon ID</a></li>
+		<li><a href="#">Forgot your UCLA Logon ID or Password?</a></li>
+		<li><a href="#">Need a UCLA Logon ID?</a></li>
 	</ul>
 	
 </form>
