--- a/css/medcenter.css
+++ b/css/medcenter.css
@@ -1,49 +1,30 @@
 /*
-Error: Undefined variable: "$h4-font-size".
-        on line 5 of /Users/erutan/Github/SSOUI/_scss/_pure-forms.scss
-        from line 16 of /Users/erutan/Github/SSOUI/_scss/medcenter.scss
+Error: File to import not found or unreadable: pure-forms.
+       Load paths:
+         Compass::SpriteImporter
+         /Users/erutan/Github/SSOUI/_scss
+         /Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.1/stylesheets
+         /Library/Ruby/Gems/2.0.0/gems/compass-normalize-1.5/stylesheets
+         /Library/Ruby/Gems/2.0.0/gems/sassy-maps-0.4.0/sass
+         /Library/Ruby/Gems/2.0.0/gems/breakpoint-2.5.0/stylesheets
+         /Library/Ruby/Gems/2.0.0/gems/singularitygs-1.4.0/stylesheets
+        on line 16 of /Users/erutan/Github/SSOUI/_scss/medcenter.scss
 
-1: // general layout gems
-2: @import 'singularitygs';
-3: @import 'breakpoint';
-4: @import 'compass/css3';
-5: @import 'compass/utilities/general/clearfix';
-6: 
-7: // normalize components, see https://github.com/ksmandersen/compass-normalize
-8: @import 'normalize-version';
-9: @import 'normalize/html5';
-10: @import 'normalize/base';
+11: @import 'normalize/links';
+12: @import 'normalize/forms';
+13: 
+14: // custom styles
+15: @import 'med-vars';
+16: @import 'pure-forms';
+17: @import 'sso-styles';
 
 Backtrace:
-/Users/erutan/Github/SSOUI/_scss/_pure-forms.scss:5
 /Users/erutan/Github/SSOUI/_scss/medcenter.scss:16
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/script/tree/variable.rb:49:in `_perform'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/script/tree/node.rb:50:in `perform'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/tree/visitors/perform.rb:384:in `visit_prop'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/tree/visitors/perform.rb:158:in `block in visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/stack.rb:79:in `block in with_base'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/stack.rb:115:in `with_frame'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/stack.rb:79:in `with_base'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/tree/visitors/perform.rb:158:in `visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/tree/visitors/perform.rb:420:in `block (2 levels) in visit_rule'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/tree/visitors/perform.rb:420:in `map'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/tree/visitors/perform.rb:420:in `block in visit_rule'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/tree/visitors/perform.rb:179:in `with_environment'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/tree/visitors/perform.rb:418:in `visit_rule'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/tree/visitors/perform.rb:158:in `block in visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/stack.rb:79:in `block in with_base'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/stack.rb:115:in `with_frame'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/stack.rb:79:in `with_base'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/tree/visitors/perform.rb:158:in `visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/tree/visitors/perform.rb:315:in `block (2 levels) in visit_import'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/tree/visitors/perform.rb:315:in `map'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/tree/visitors/perform.rb:315:in `block in visit_import'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/stack.rb:88:in `block in with_import'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/stack.rb:115:in `with_frame'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/stack.rb:88:in `with_import'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/tree/visitors/perform.rb:312:in `visit_import'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/tree/import_node.rb:66:in `rescue in import'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/tree/import_node.rb:45:in `import'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/tree/import_node.rb:28:in `imported_file'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/tree/import_node.rb:37:in `css_import?'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/tree/visitors/perform.rb:301:in `visit_import'
 /Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/tree/visitors/base.rb:36:in `visit'
 /Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/tree/visitors/perform.rb:158:in `block in visit'
 /Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/stack.rb:79:in `block in with_base'
@@ -80,4 +61,4 @@ Backtrace:
 body:before {
   white-space: pre;
   font-family: monospace;
-  content: "Error: Undefined variable: \"$h4-font-size\".\A         on line 5 of /Users/erutan/Github/SSOUI/_scss/_pure-forms.scss\A         from line 16 of /Users/erutan/Github/SSOUI/_scss/medcenter.scss\A \A 1: // general layout gems\A 2: @import 'singularitygs';\A 3: @import 'breakpoint';\A 4: @import 'compass/css3';\A 5: @import 'compass/utilities/general/clearfix';\A 6: \A 7: // normalize components, see https://github.com/ksmandersen/compass-normalize\A 8: @import 'normalize-version';\A 9: @import 'normalize/html5';\A 10: @import 'normalize/base';"; }
+  content: "Error: File to import not found or unreadable: pure-forms.\A        Load paths:\A          Compass::SpriteImporter\A          /Users/erutan/Github/SSOUI/_scss\A          /Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.1/stylesheets\A          /Library/Ruby/Gems/2.0.0/gems/compass-normalize-1.5/stylesheets\A          /Library/Ruby/Gems/2.0.0/gems/sassy-maps-0.4.0/sass\A          /Library/Ruby/Gems/2.0.0/gems/breakpoint-2.5.0/stylesheets\A          /Library/Ruby/Gems/2.0.0/gems/singularitygs-1.4.0/stylesheets\A         on line 16 of /Users/erutan/Github/SSOUI/_scss/medcenter.scss\A \A 11: @import 'normalize/links';\A 12: @import 'normalize/forms';\A 13: \A 14: // custom styles\A 15: @import 'med-vars';\A 16: @import 'pure-forms';\A 17: @import 'sso-styles';"; }
