--- a/css/ucla-logon.css
+++ b/css/ucla-logon.css
@@ -162,7 +162,7 @@ optgroup {
   font-weight: bold;
 }
 
-/* line 78, ../_scss/_ucla-vars.scss */
+/* line 79, ../_scss/_ucla-vars.scss */
 body {
   font-size: 100%;
 }
@@ -181,26 +181,26 @@ body {
   font-weight: 400;
   font-style: normal;
 }
-/* line 3, ../_scss/_pure-forms.scss */
+/* line 3, ../_scss/_forms.scss */
 input {
-  width: 20em;
-  font-size: 1.125em;
+  width: 21em;
+  font-size: 1.25em;
   margin-bottom: 1em;
-  -moz-border-radius: 3px;
-  -webkit-border-radius: 3px;
-  border-radius: 3px;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
 }
 
-/* line 10, ../_scss/_pure-forms.scss */
+/* line 10, ../_scss/_forms.scss */
 select, input, textarea {
   padding: 0.5em 0.6em;
   display: inline-block;
   border: 1px solid #ccc;
   box-shadow: inset 0 1px 3px #ddd;
-  border-radius: 3px;
+  border-radius: 4px;
 }
 
-/* line 18, ../_scss/_pure-forms.scss */
+/* line 18, ../_scss/_forms.scss */
 select:focus, input:focus, textarea:focus {
   outline: 0;
   outline: thin dotted \9;
@@ -208,53 +208,50 @@ select:focus, input:focus, textarea:focus {
   border-color: #00a5e5;
 }
 
-/* line 24, ../_scss/_pure-forms.scss */
+/* line 24, ../_scss/_forms.scss */
 select[disabled], input[disabled] {
   cursor: not-allowed !important;
   background-color: #eaeded;
   color: #cad2d3;
 }
 
-/* line 30, ../_scss/_pure-forms.scss */
+/* line 30, ../_scss/_forms.scss */
 input:focus:invalid,
 select:focus:invalid {
   color: #b94a48;
   border-color: #ee5f5b;
 }
 
-/* line 36, ../_scss/_pure-forms.scss */
+/* line 36, ../_scss/_forms.scss */
 input:focus:invalid:focus,
 select:focus:invalid:focus {
   border-color: #e9322d;
 }
 
-/* line 41, ../_scss/_pure-forms.scss */
+/* line 41, ../_scss/_forms.scss */
 select {
   border: 1px solid #ccc;
   background-color: #fff;
 }
 
-/* line 46, ../_scss/_pure-forms.scss */
+/* line 46, ../_scss/_forms.scss */
 fieldset {
   margin: 0;
   padding: 0.5em 0;
   border: 0;
 }
 
-/* line 52, ../_scss/_pure-forms.scss */
+/* line 52, ../_scss/_forms.scss */
 legend {
   display: block;
   width: 100%;
-  padding: 0.25em 0;
-  margin-bottom: 0.5em;
-  color: #333;
-  border-bottom: 1px solid #e5e5e5;
+  padding: 0.5em 0;
   font-weight: normal;
   color: #347bad;
   font-size: 1.5em;
 }
 
-/* line 64, ../_scss/_pure-forms.scss */
+/* line 61, ../_scss/_forms.scss */
 button, .button {
   display: inline-block;
   *display: inline;
@@ -275,7 +272,7 @@ button, .button {
   /*IE 6/7 - To reduce IE's oversized button text*/
   *overflow: visible;
   /*IE 6/7 - Because of IE's overly large left/right padding on buttons */
-  padding: 0.5em 1em;
+  padding: 0.75em 1em;
   color: #444;
   /* rgba not supported (IE 8) */
   color: rgba(0, 0, 0, 0.8);
@@ -288,27 +285,27 @@ button, .button {
   /*IE9 + everything else*/
   background-color: #E6E6E6;
   text-decoration: none;
-  border-radius: 3px;
+  border-radius: 4px;
 }
 
 /* Firefox: Get rid of the inner focus border */
-/* line 94, ../_scss/_pure-forms.scss */
+/* line 91, ../_scss/_forms.scss */
 button::-moz-focus-inner {
   padding: 0;
   border: 0;
 }
 
-/* line 99, ../_scss/_pure-forms.scss */
+/* line 96, ../_scss/_forms.scss */
 button:focus {
   outline: 0;
 }
 
-/* line 103, ../_scss/_pure-forms.scss */
+/* line 100, ../_scss/_forms.scss */
 button:active {
   box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.15) inset, 0 0 6px rgba(0, 0, 0, 0.2) inset;
 }
 
-/* line 107, ../_scss/_pure-forms.scss */
+/* line 104, ../_scss/_forms.scss */
 button[disabled] {
   border: none;
   background-image: none;
@@ -321,26 +318,26 @@ button[disabled] {
   box-shadow: none;
 }
 
-/* line 119, ../_scss/_pure-forms.scss */
+/* line 116, ../_scss/_forms.scss */
 .primary-button {
   background-color: #347bad;
   color: #fff;
   font-size: 1.125em;
 }
-/* line 123, ../_scss/_pure-forms.scss */
+/* line 120, ../_scss/_forms.scss */
 .primary-button:hover {
   background-color: #ffe800;
   color: #0055a6;
 }
 
-/* line 129, ../_scss/_pure-forms.scss */
+/* line 126, ../_scss/_forms.scss */
 .secondary-button {
   background-color: #526991;
   color: #fff;
   margin-top: 1em;
   width: 100%;
 }
-/* line 134, ../_scss/_pure-forms.scss */
+/* line 131, ../_scss/_forms.scss */
 .secondary-button:hover {
   background-color: #405170;
   color: #fff;
@@ -362,49 +359,48 @@ html {
 
 /* line 17, ../_scss/_sso-styles.scss */
 body {
-  max-width: 36em;
-  margin: 0 auto;
   color: #666;
   font-family: ProximaNova, Verdana, sans-serif;
+  letter-spacing: 0.5px;
 }
 
-/* line 24, ../_scss/_sso-styles.scss */
+/* line 23, ../_scss/_sso-styles.scss */
 h1, h2, h3, h4 {
   font-weight: normal;
   color: #347bad;
 }
 
-/* line 29, ../_scss/_sso-styles.scss */
+/* line 28, ../_scss/_sso-styles.scss */
 h1 {
   font-size: 2em;
 }
 
-/* line 33, ../_scss/_sso-styles.scss */
+/* line 32, ../_scss/_sso-styles.scss */
 div h1, article h1 {
   margin: 0;
 }
 
-/* line 37, ../_scss/_sso-styles.scss */
+/* line 36, ../_scss/_sso-styles.scss */
 h2 {
   font-size: 1.5em;
 }
 
-/* line 41, ../_scss/_sso-styles.scss */
+/* line 40, ../_scss/_sso-styles.scss */
 h3 {
   font-size: 1.25em;
 }
 
-/* line 45, ../_scss/_sso-styles.scss */
+/* line 44, ../_scss/_sso-styles.scss */
 h4 {
   font-size: 1.125em;
 }
 
-/* line 49, ../_scss/_sso-styles.scss */
+/* line 48, ../_scss/_sso-styles.scss */
 p {
   line-height: 1.375em;
 }
 
-/* line 53, ../_scss/_sso-styles.scss */
+/* line 52, ../_scss/_sso-styles.scss */
 a {
   color: #8237ff;
   text-decoration: underline;
@@ -417,35 +413,35 @@ a {
   -webkit-transition-duration: 0.15s;
   transition-duration: 0.15s;
 }
-/* line 58, ../_scss/_sso-styles.scss */
+/* line 57, ../_scss/_sso-styles.scss */
 a:visited {
   color: #8237ff;
 }
-/* line 61, ../_scss/_sso-styles.scss */
+/* line 60, ../_scss/_sso-styles.scss */
 a:hover, a:focus {
   text-decoration: underline;
   color: #1e4b87;
   outline: 0;
 }
-/* line 66, ../_scss/_sso-styles.scss */
+/* line 65, ../_scss/_sso-styles.scss */
 a:focus {
   outline: thin dotted;
 }
-/* line 69, ../_scss/_sso-styles.scss */
+/* line 68, ../_scss/_sso-styles.scss */
 a:active {
   outline: 0;
 }
 
-/* line 74, ../_scss/_sso-styles.scss */
+/* line 73, ../_scss/_sso-styles.scss */
 section[role="main"] ul {
   list-style: none;
   padding-left: 1.5em;
 }
-/* line 77, ../_scss/_sso-styles.scss */
+/* line 76, ../_scss/_sso-styles.scss */
 section[role="main"] ul li {
   margin-bottom: .5em;
 }
-/* line 80, ../_scss/_sso-styles.scss */
+/* line 79, ../_scss/_sso-styles.scss */
 section[role="main"] ul li:before {
   color: #00ff87;
   content: "•";
@@ -454,105 +450,62 @@ section[role="main"] ul li:before {
   left: -.25em;
 }
 
-/* line 94, ../_scss/_sso-styles.scss */
-header[role="banner"] img {
-  width: 60%;
-  margin-top: 0.5em;
-}
-
-/* line 100, ../_scss/_sso-styles.scss */
+/* line 92, ../_scss/_sso-styles.scss */
 section[role="main"] {
   margin-bottom: 4em;
 }
 
-/* line 104, ../_scss/_sso-styles.scss */
-footer[role="contentinfo"] {
-  position: absolute;
-  bottom: 0;
-  height: 2em;
-  width: 100%;
-  max-width: 36em;
-  background: #0055a6;
-  border-top: 1px solid #002140;
-  padding: 0.5em;
-  color: #cccccc;
-}
-/* line 114, ../_scss/_sso-styles.scss */
-footer[role="contentinfo"] p {
-  margin: 0;
-  font-size: 0.75em;
-}
-/* line 118, ../_scss/_sso-styles.scss */
-footer[role="contentinfo"] a {
-  text-decoration: none;
-  color: #fff;
-}
-/* line 121, ../_scss/_sso-styles.scss */
-footer[role="contentinfo"] a:visited {
-  color: #fff;
-}
-/* line 124, ../_scss/_sso-styles.scss */
-footer[role="contentinfo"] a:hover, footer[role="contentinfo"] a:focus {
-  color: #ffff00;
-  text-decoration: underline;
+/* line 96, ../_scss/_sso-styles.scss */
+.logo {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-/* line 131, ../_scss/_sso-styles.scss */
-.footer-meta-info {
-  float: left;
-}
-
-/* line 135, ../_scss/_sso-styles.scss */
-.footer-non-human {
-  float: right;
-}
-
-/* line 139, ../_scss/_sso-styles.scss */
-article {
-  background: #fff;
-  box-shadow: 0 1px 1px #347bad;
-  padding: 1em;
-}
-
-/* line 145, ../_scss/_sso-styles.scss */
+/* line 102, ../_scss/_sso-styles.scss */
 #sso {
-  overflow: hidden;
   background: #fff;
   box-shadow: 0 1px 1px #347bad;
-  padding: 1em;
+  margin: 2em auto 0;
+  width: 36em;
+  padding: 0 4em 1em;
+  overflow: hidden;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
 }
-/* line 150, ../_scss/_sso-styles.scss */
+/* line 110, ../_scss/_sso-styles.scss */
 #sso label {
   display: none;
 }
-/* line 153, ../_scss/_sso-styles.scss */
+/* line 113, ../_scss/_sso-styles.scss */
 #sso fieldset {
   border: none;
 }
-/* line 156, ../_scss/_sso-styles.scss */
+/* line 116, ../_scss/_sso-styles.scss */
 #sso ol {
   list-style: none;
   margin: 0;
   padding-left: 0;
 }
 
-/* line 163, ../_scss/_sso-styles.scss */
+/* line 123, ../_scss/_sso-styles.scss */
 #report {
   overflow: hidden;
 }
-/* line 165, ../_scss/_sso-styles.scss */
+/* line 125, ../_scss/_sso-styles.scss */
 #report label {
   display: block;
   margin-bottom: 0.25em;
 }
-/* line 169, ../_scss/_sso-styles.scss */
+/* line 129, ../_scss/_sso-styles.scss */
 #report ol {
   list-style: none;
   margin: 0;
   padding-left: 0;
 }
 
-/* line 176, ../_scss/_sso-styles.scss */
+/* line 136, ../_scss/_sso-styles.scss */
 .sso-submit {
   width: 430%;
   clear: right;
@@ -562,7 +515,7 @@ article {
   padding-top: 0;
 }
 @media (min-width: 321px) {
-  /* line 176, ../_scss/_sso-styles.scss */
+  /* line 136, ../_scss/_sso-styles.scss */
   .sso-submit {
     width: 23.25581%;
     clear: right;
@@ -572,7 +525,7 @@ article {
   }
 }
 
-/* line 184, ../_scss/_sso-styles.scss */
+/* line 144, ../_scss/_sso-styles.scss */
 .sso-links {
   width: 430%;
   clear: right;
@@ -585,7 +538,7 @@ article {
   margin: 0;
 }
 @media (min-width: 321px) {
-  /* line 184, ../_scss/_sso-styles.scss */
+  /* line 144, ../_scss/_sso-styles.scss */
   .sso-links {
     width: 74.4186%;
     clear: right;
@@ -593,62 +546,106 @@ article {
     margin-right: 0;
   }
 }
-/* line 192, ../_scss/_sso-styles.scss */
+/* line 152, ../_scss/_sso-styles.scss */
 .sso-links li {
   margin-bottom: 0;
 }
 
-/* line 197, ../_scss/_sso-styles.scss */
+/* line 157, ../_scss/_sso-styles.scss */
+article {
+  background: #fff;
+  box-shadow: 0 1px 1px #347bad;
+  padding: 1em;
+}
+
+/* line 163, ../_scss/_sso-styles.scss */
 .sp-news {
   background: rgba(204, 204, 204, 0.2);
   padding: 0.5em;
   margin-top: 2em;
-  -moz-border-radius: 3px;
-  -webkit-border-radius: 3px;
-  border-radius: 3px;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
 }
-/* line 202, ../_scss/_sso-styles.scss */
+/* line 168, ../_scss/_sso-styles.scss */
 .sp-news p {
   font-size: 0.75em;
 }
-/* line 205, ../_scss/_sso-styles.scss */
+/* line 171, ../_scss/_sso-styles.scss */
 .sp-news h3 {
   margin-top: 0;
 }
 
-/* line 210, ../_scss/_sso-styles.scss */
+/* line 176, ../_scss/_sso-styles.scss */
 .loading i {
   font-size: 4em;
   margin: 1em 45%;
 }
 
-/* line 215, ../_scss/_sso-styles.scss */
+/* line 181, ../_scss/_sso-styles.scss */
 .error {
   background: repeating-linear-gradient(45deg, #0a0007, #0a0007 0.5em, #240017 0.5em, #240017 1em);
   color: #ff00a5;
   padding: 1em;
   margin-bottom: 1em;
-  -moz-border-radius: 3px;
-  -webkit-border-radius: 3px;
-  border-radius: 3px;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
 }
-/* line 221, ../_scss/_sso-styles.scss */
+/* line 187, ../_scss/_sso-styles.scss */
 .error h1 {
   color: #ff00a5;
 }
 
-/* line 226, ../_scss/_sso-styles.scss */
+/* line 192, ../_scss/_sso-styles.scss */
 .alert {
   background: #ffff00;
   color: #0055a6;
   padding: 1em;
   margin-bottom: 1em;
-  -moz-border-radius: 3px;
-  -webkit-border-radius: 3px;
-  border-radius: 3px;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
 }
-/* line 232, ../_scss/_sso-styles.scss */
+/* line 198, ../_scss/_sso-styles.scss */
 .alert h1 {
   color: #0055a6;
   margin: 0;
+}
+
+/* line 204, ../_scss/_sso-styles.scss */
+footer[role="contentinfo"] {
+  position: absolute;
+  bottom: 0;
+  height: 2em;
+  width: 100%;
+  background: #0055a6;
+  border-top: 1px solid #002140;
+  padding: 0.5em;
+  color: #cccccc;
+}
+/* line 213, ../_scss/_sso-styles.scss */
+footer[role="contentinfo"] p {
+  width: 48em;
+  margin: 0 auto;
+  font-size: 0.75em;
+}
+/* line 218, ../_scss/_sso-styles.scss */
+footer[role="contentinfo"] a {
+  text-decoration: none;
+  color: #fff;
+}
+/* line 221, ../_scss/_sso-styles.scss */
+footer[role="contentinfo"] a:visited {
+  color: #fff;
+}
+/* line 224, ../_scss/_sso-styles.scss */
+footer[role="contentinfo"] a:hover, footer[role="contentinfo"] a:focus {
+  color: #ffff00;
+  text-decoration: underline;
+}
+
+/* line 231, ../_scss/_sso-styles.scss */
+.non-human {
+  float: right;
 }
