fix gh-pages logo show

--- a/_includes/ucla-sso-form-disabled.html
+++ b/_includes/ucla-sso-form-disabled.html
@@ -1,6 +1,6 @@
 <form id="sso" role="form">
 	
-	<img src="/images/ucla.png" alt="UCLA" class="logo">
+	<img src="{{ site.baseurl }}/images/ucla.png" alt="UCLA" class="logo">
 	
 	<fieldset class="login-form">
 		<legend>Sign In with your UCLA Logon ID</legend>
