--- a/css/ucla-logon.css
+++ b/css/ucla-logon.css
@@ -205,9 +205,9 @@ input {
   width: 21em;
   font-size: 1.25em;
   margin-bottom: 1em;
-  -moz-border-radius: 4px;
-  -webkit-border-radius: 4px;
-  border-radius: 4px;
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
+  border-radius: 3px;
 }
 
 /* line 12, ../_scss/_forms.scss */
@@ -216,7 +216,7 @@ select, input, textarea {
   display: inline-block;
   border: 1px solid #ccc;
   box-shadow: inset 0 1px 3px #ddd;
-  border-radius: 4px;
+  border-radius: 3px;
 }
 
 /* line 20, ../_scss/_forms.scss */
@@ -304,7 +304,7 @@ button, .button {
   /*IE9 + everything else*/
   background-color: #E6E6E6;
   text-decoration: none;
-  border-radius: 4px;
+  border-radius: 3px;
 }
 
 /* Firefox: Get rid of the inner focus border */
@@ -353,10 +353,11 @@ button[disabled] {
 .secondary-button {
   background-color: #526991;
   color: #fff;
-  margin-top: 1em;
-  width: 60%;
+  margin: 1em auto 0;
+  display: block;
+  width: 36em;
 }
-/* line 133, ../_scss/_forms.scss */
+/* line 134, ../_scss/_forms.scss */
 .secondary-button:hover {
   background-color: #405170;
   color: #fff;
@@ -472,16 +473,18 @@ section[role="main"] ul li:before {
 /* line 92, ../_scss/_sso-styles.scss */
 section[role="main"] {
   margin-bottom: 4em;
+  max-width: 960px;
+  margin: 0 auto 3em;
 }
 
-/* line 96, ../_scss/_sso-styles.scss */
+/* line 98, ../_scss/_sso-styles.scss */
 .logo {
   display: block;
   margin-left: auto;
   margin-right: auto;
 }
 
-/* line 102, ../_scss/_sso-styles.scss */
+/* line 104, ../_scss/_sso-styles.scss */
 #sso {
   background: #fff;
   box-shadow: 0 1px 1px #347bad;
@@ -489,54 +492,54 @@ section[role="main"] {
   width: 36em;
   padding: 0 4em 1em;
   overflow: hidden;
-  -moz-border-radius: 4px;
-  -webkit-border-radius: 4px;
-  border-radius: 4px;
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
+  border-radius: 3px;
 }
-/* line 110, ../_scss/_sso-styles.scss */
+/* line 112, ../_scss/_sso-styles.scss */
 #sso label {
   display: none;
 }
-/* line 113, ../_scss/_sso-styles.scss */
+/* line 115, ../_scss/_sso-styles.scss */
 #sso fieldset {
   border: none;
 }
-/* line 116, ../_scss/_sso-styles.scss */
+/* line 118, ../_scss/_sso-styles.scss */
 #sso ol {
   list-style: none;
   margin: 0;
   padding-left: 0;
 }
 
-/* line 123, ../_scss/_sso-styles.scss */
+/* line 125, ../_scss/_sso-styles.scss */
 #report {
   overflow: hidden;
 }
-/* line 125, ../_scss/_sso-styles.scss */
+/* line 127, ../_scss/_sso-styles.scss */
 #report label {
   display: block;
   margin-bottom: 0.25em;
 }
-/* line 129, ../_scss/_sso-styles.scss */
+/* line 131, ../_scss/_sso-styles.scss */
 #report ol {
   list-style: none;
   margin: 0;
   padding-left: 0;
 }
 
-/* line 136, ../_scss/_sso-styles.scss */
+/* line 138, ../_scss/_sso-styles.scss */
 .sso-submit {
-  width: 80%;
-  float: left;
-  margin-right: -100%;
+  width: 100%;
+  float: right;
   margin-left: 0;
+  margin-right: 0;
   clear: none;
   padding-top: 0;
 }
 @media (min-width: 321px) {
-  /* line 136, ../_scss/_sso-styles.scss */
+  /* line 138, ../_scss/_sso-styles.scss */
   .sso-submit {
-    width: 20%;
+    width: 23.25581%;
     float: left;
     margin-right: -100%;
     margin-left: 0;
@@ -544,12 +547,12 @@ section[role="main"] {
   }
 }
 
-/* line 144, ../_scss/_sso-styles.scss */
+/* line 146, ../_scss/_sso-styles.scss */
 .sso-links {
-  width: 80%;
-  float: left;
-  margin-right: -100%;
+  width: 100%;
+  float: right;
   margin-left: 0;
+  margin-right: 0;
   clear: none;
   overflow: hidden;
   *zoom: 1;
@@ -557,83 +560,84 @@ section[role="main"] {
   margin: 0;
 }
 @media (min-width: 321px) {
-  /* line 144, ../_scss/_sso-styles.scss */
+  /* line 146, ../_scss/_sso-styles.scss */
   .sso-links {
-    width: 60%;
-    float: left;
-    margin-right: -100%;
-    margin-left: 20%;
+    width: 74.4186%;
+    float: right;
+    margin-left: 0;
+    margin-right: 0;
     clear: none;
   }
 }
-/* line 152, ../_scss/_sso-styles.scss */
+/* line 154, ../_scss/_sso-styles.scss */
 .sso-links li {
   margin-bottom: 0;
 }
 
-/* line 157, ../_scss/_sso-styles.scss */
+/* line 159, ../_scss/_sso-styles.scss */
 article {
   background: #fff;
   box-shadow: 0 1px 1px #347bad;
   padding: 1em;
 }
 
-/* line 163, ../_scss/_sso-styles.scss */
+/* line 165, ../_scss/_sso-styles.scss */
 .sp-news {
-  background: rgba(204, 204, 204, 0.2);
+  background: rgba(204, 204, 204, 0.15);
   padding: 0.5em;
   margin-top: 2em;
-  -moz-border-radius: 4px;
-  -webkit-border-radius: 4px;
-  border-radius: 4px;
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
+  border-radius: 3px;
 }
-/* line 168, ../_scss/_sso-styles.scss */
+/* line 170, ../_scss/_sso-styles.scss */
 .sp-news p {
   font-size: 0.75em;
 }
-/* line 171, ../_scss/_sso-styles.scss */
+/* line 173, ../_scss/_sso-styles.scss */
 .sp-news h3 {
+  font-size: 1em;
   margin-top: 0;
 }
 
-/* line 176, ../_scss/_sso-styles.scss */
+/* line 179, ../_scss/_sso-styles.scss */
 .loading i {
   font-size: 4em;
   margin: 1em 45%;
 }
 
-/* line 181, ../_scss/_sso-styles.scss */
+/* line 184, ../_scss/_sso-styles.scss */
 .error {
   background: repeating-linear-gradient(45deg, #0a0007, #0a0007 0.5em, #240017 0.5em, #240017 1em);
   color: #ff00a5;
   padding: 1em;
   margin-bottom: 1em;
-  -moz-border-radius: 4px;
-  -webkit-border-radius: 4px;
-  border-radius: 4px;
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
+  border-radius: 3px;
 }
-/* line 187, ../_scss/_sso-styles.scss */
+/* line 190, ../_scss/_sso-styles.scss */
 .error h1 {
   color: #ff00a5;
 }
 
-/* line 192, ../_scss/_sso-styles.scss */
+/* line 195, ../_scss/_sso-styles.scss */
 .alert {
   background: #ffff00;
   color: #0055a6;
   padding: 1em;
   margin-bottom: 1em;
-  -moz-border-radius: 4px;
-  -webkit-border-radius: 4px;
-  border-radius: 4px;
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
+  border-radius: 3px;
 }
-/* line 198, ../_scss/_sso-styles.scss */
+/* line 201, ../_scss/_sso-styles.scss */
 .alert h1 {
   color: #0055a6;
   margin: 0;
 }
 
-/* line 204, ../_scss/_sso-styles.scss */
+/* line 207, ../_scss/_sso-styles.scss */
 footer[role="contentinfo"] {
   position: absolute;
   bottom: 0;
@@ -644,28 +648,28 @@ footer[role="contentinfo"] {
   padding: 0.5em;
   color: #cccccc;
 }
-/* line 213, ../_scss/_sso-styles.scss */
+/* line 216, ../_scss/_sso-styles.scss */
 footer[role="contentinfo"] p {
   width: 48em;
   margin: 0 auto;
   font-size: 0.75em;
 }
-/* line 218, ../_scss/_sso-styles.scss */
+/* line 221, ../_scss/_sso-styles.scss */
 footer[role="contentinfo"] a {
   text-decoration: none;
   color: #fff;
 }
-/* line 221, ../_scss/_sso-styles.scss */
+/* line 224, ../_scss/_sso-styles.scss */
 footer[role="contentinfo"] a:visited {
   color: #fff;
 }
-/* line 224, ../_scss/_sso-styles.scss */
+/* line 227, ../_scss/_sso-styles.scss */
 footer[role="contentinfo"] a:hover, footer[role="contentinfo"] a:focus {
   color: #ffff00;
   text-decoration: underline;
 }
 
-/* line 231, ../_scss/_sso-styles.scss */
+/* line 234, ../_scss/_sso-styles.scss */
 .non-human {
   float: right;
 }
