--- a/_scss/_ucla-vars.scss
+++ b/_scss/_ucla-vars.scss
@@ -91,6 +91,7 @@ $base-line-height: 1.375em;
 $half-spacing: .5em;
 $default-spacing: 1em;
 $double-spacing: 2em;
+$triple-spacing: 3em;
 
 $global-border-radius: 3px;
 
