--- a/css/medcenter.css
+++ b/css/medcenter.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /*! normalize.css v3.0.0 | HTML5 Display Definitions | MIT License | git.io/normalize */
 /* line 9, ../../../../../Library/Ruby/Gems/2.0.0/gems/compass-normalize-1.5/stylesheets/normalize/_html5.scss */
 article,
@@ -162,495 +161,8 @@ optgroup {
   font-weight: bold;
 }
 
-/* line 77, ../_scss/_ucla-vars.scss */
-body {
-  font-size: 100%;
-}
-
 /*
-@font-face {
-	font-family: '../fonts/ProximaNova';src: url('../fonts/ProximaNova-Light.eot');src: url('../fonts/ProximaNova-Light.eot?#iefix') format('embedded-opentype'),url('../fonts/ProximaNova-Light.woff') format('woff'),url('../fonts/ProximaNova-Light.ttf') format('truetype');
-	font-weight: 300;
-	font-style: normal;
-}
+@import 'med-vars';
+@import 'forms';
+@import 'sso-styles';
 */
-@font-face {
-  font-family: '../fonts/ProximaNova';
-  src: url("../fonts/ProximaNova-Regular.eot");
-  src: url("../fonts/ProximaNova-Regular.eot?#iefix") format("embedded-opentype"), url("../fonts/ProximaNova-Regular.woff") format("woff"), url("../fonts/ProximaNova-Regular.ttf") format("truetype");
-  font-weight: 400;
-  font-style: normal;
-}
-/* line 5, ../_scss/_forms.scss */
-input {
-  width: 21em;
-  font-size: 1.25em;
-  margin-bottom: 1em;
-  -moz-border-radius: 3px;
-  -webkit-border-radius: 3px;
-  border-radius: 3px;
-}
-
-/* line 12, ../_scss/_forms.scss */
-select, input, textarea {
-  padding: 0.5em 0.6em;
-  display: inline-block;
-  border: 1px solid #ccc;
-  box-shadow: inset 0 1px 3px #ddd;
-  border-radius: 3px;
-}
-
-/* line 20, ../_scss/_forms.scss */
-select:focus, input:focus, textarea:focus {
-  outline: 0;
-  outline: thin dotted \9;
-  /* IE6-9 */
-  border-color: #00a5e5;
-}
-
-/* line 26, ../_scss/_forms.scss */
-select[disabled], input[disabled] {
-  cursor: not-allowed !important;
-  background-color: #eaeded;
-  color: #cad2d3;
-}
-
-/* line 32, ../_scss/_forms.scss */
-input:focus:invalid,
-select:focus:invalid {
-  color: #b94a48;
-  border-color: #ee5f5b;
-}
-
-/* line 38, ../_scss/_forms.scss */
-input:focus:invalid:focus,
-select:focus:invalid:focus {
-  border-color: #e9322d;
-}
-
-/* line 43, ../_scss/_forms.scss */
-select {
-  border: 1px solid #ccc;
-  background-color: #fff;
-}
-
-/* line 48, ../_scss/_forms.scss */
-fieldset {
-  margin: 0;
-  padding: 0.5em 0;
-  border: 0;
-}
-
-/* line 54, ../_scss/_forms.scss */
-legend {
-  display: block;
-  width: 100%;
-  padding: 0.5em 0;
-  font-weight: normal;
-  color: #347bad;
-  font-size: 1.5em;
-}
-
-/* line 63, ../_scss/_forms.scss */
-button, .button {
-  display: inline-block;
-  *display: inline;
-  /*IE 6/7*/
-  zoom: 1;
-  line-height: normal;
-  vertical-align: baseline;
-  text-align: center;
-  cursor: pointer;
-  -webkit-user-drag: none;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  font-family: inherit;
-  font-size: 100%;
-  *font-size: 90%;
-  /*IE 6/7 - To reduce IE's oversized button text*/
-  *overflow: visible;
-  /*IE 6/7 - Because of IE's overly large left/right padding on buttons */
-  padding: 0.75em 1em;
-  color: #444;
-  /* rgba not supported (IE 8) */
-  color: rgba(0, 0, 0, 0.8);
-  /* rgba supported */
-  *color: #444;
-  /* IE 6 & 7 */
-  border: 1px solid #999;
-  /*IE 6/7/8*/
-  border: none transparent;
-  /*IE9 + everything else*/
-  background-color: #E6E6E6;
-  text-decoration: none;
-  border-radius: 3px;
-}
-
-/* Firefox: Get rid of the inner focus border */
-/* line 93, ../_scss/_forms.scss */
-button::-moz-focus-inner {
-  padding: 0;
-  border: 0;
-}
-
-/* line 98, ../_scss/_forms.scss */
-button:focus {
-  outline: 0;
-}
-
-/* line 102, ../_scss/_forms.scss */
-button:active {
-  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.15) inset, 0 0 6px rgba(0, 0, 0, 0.2) inset;
-}
-
-/* line 106, ../_scss/_forms.scss */
-button[disabled] {
-  border: none;
-  background-image: none;
-  filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
-  filter: alpha(opacity=40);
-  -khtml-opacity: 0.40;
-  -moz-opacity: 0.40;
-  opacity: 0.40;
-  cursor: not-allowed;
-  box-shadow: none;
-}
-
-/* line 118, ../_scss/_forms.scss */
-.primary-button {
-  background-color: #347bad;
-  color: #fff;
-  font-size: 1.125em;
-}
-/* line 122, ../_scss/_forms.scss */
-.primary-button:hover {
-  background-color: #ffe800;
-  color: #0055a6;
-}
-
-/* line 128, ../_scss/_forms.scss */
-.secondary-button {
-  background-color: #526991;
-  color: #fff;
-  margin: 1em auto 0;
-  display: block;
-  width: 36em;
-}
-/* line 134, ../_scss/_forms.scss */
-.secondary-button:hover {
-  background-color: #405170;
-  color: #fff;
-}
-
-/* line 5, ../_scss/_sso-styles.scss */
-html {
-  background: #d1e8f8 url("../images/background.jpg");
-  box-sizing: border-box;
-  position: relative;
-  min-height: 100%;
-  width: 100%;
-}
-
-/* line 13, ../_scss/_sso-styles.scss */
-*, *:before, *:after {
-  box-sizing: inherit;
-}
-
-/* line 17, ../_scss/_sso-styles.scss */
-body {
-  color: #666;
-  font-family: ProximaNova, Verdana, sans-serif;
-  letter-spacing: 0.5px;
-}
-
-/* line 23, ../_scss/_sso-styles.scss */
-h1, h2, h3, h4 {
-  font-weight: normal;
-  color: #347bad;
-}
-
-/* line 28, ../_scss/_sso-styles.scss */
-h1 {
-  font-size: 2em;
-}
-
-/* line 32, ../_scss/_sso-styles.scss */
-div h1, article h1 {
-  margin: 0;
-}
-
-/* line 36, ../_scss/_sso-styles.scss */
-h2 {
-  font-size: 1.5em;
-}
-
-/* line 40, ../_scss/_sso-styles.scss */
-h3 {
-  font-size: 1.25em;
-}
-
-/* line 44, ../_scss/_sso-styles.scss */
-h4 {
-  font-size: 1.125em;
-}
-
-/* line 48, ../_scss/_sso-styles.scss */
-p {
-  line-height: 1.375em;
-}
-
-/* line 52, ../_scss/_sso-styles.scss */
-a {
-  color: #8237ff;
-  text-decoration: underline;
-  -moz-transition-property: color;
-  -o-transition-property: color;
-  -webkit-transition-property: color;
-  transition-property: color;
-  -moz-transition-duration: 0.15s;
-  -o-transition-duration: 0.15s;
-  -webkit-transition-duration: 0.15s;
-  transition-duration: 0.15s;
-}
-/* line 57, ../_scss/_sso-styles.scss */
-a:visited {
-  color: #8237ff;
-}
-/* line 60, ../_scss/_sso-styles.scss */
-a:hover, a:focus {
-  text-decoration: underline;
-  color: #1e4b87;
-  outline: 0;
-}
-/* line 65, ../_scss/_sso-styles.scss */
-a:focus {
-  outline: thin dotted;
-}
-/* line 68, ../_scss/_sso-styles.scss */
-a:active {
-  outline: 0;
-}
-
-/* line 73, ../_scss/_sso-styles.scss */
-section[role="main"] ul {
-  list-style: none;
-  padding-left: 1.5em;
-}
-/* line 76, ../_scss/_sso-styles.scss */
-section[role="main"] ul li {
-  margin-bottom: .5em;
-}
-/* line 79, ../_scss/_sso-styles.scss */
-section[role="main"] ul li:before {
-  color: #00ff87;
-  content: "•";
-  position: relative;
-  font-size: 1.2em;
-  left: -.25em;
-}
-
-/* line 92, ../_scss/_sso-styles.scss */
-section[role="main"] {
-  margin-bottom: 4em;
-  max-width: 960px;
-  margin: 0 auto 3em;
-}
-
-/* line 98, ../_scss/_sso-styles.scss */
-.logo {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-/* line 104, ../_scss/_sso-styles.scss */
-#sso {
-  background: #fff;
-  box-shadow: 0 1px 1px #347bad;
-  margin: 2em auto 0;
-  width: 36em;
-  padding: 0 4em 1em;
-  overflow: hidden;
-  -moz-border-radius: 3px;
-  -webkit-border-radius: 3px;
-  border-radius: 3px;
-}
-/* line 112, ../_scss/_sso-styles.scss */
-#sso label {
-  display: none;
-}
-/* line 115, ../_scss/_sso-styles.scss */
-#sso fieldset {
-  border: none;
-}
-/* line 118, ../_scss/_sso-styles.scss */
-#sso ol {
-  list-style: none;
-  margin: 0;
-  padding-left: 0;
-}
-
-/* line 125, ../_scss/_sso-styles.scss */
-#report {
-  overflow: hidden;
-}
-/* line 127, ../_scss/_sso-styles.scss */
-#report label {
-  display: block;
-  margin-bottom: 0.25em;
-}
-/* line 131, ../_scss/_sso-styles.scss */
-#report ol {
-  list-style: none;
-  margin: 0;
-  padding-left: 0;
-}
-
-/* line 138, ../_scss/_sso-styles.scss */
-.sso-submit {
-  width: 100%;
-  float: right;
-  margin-left: 0;
-  margin-right: 0;
-  clear: none;
-  padding-top: 0;
-}
-@media (min-width: 321px) {
-  /* line 138, ../_scss/_sso-styles.scss */
-  .sso-submit {
-    width: 23.25581%;
-    float: left;
-    margin-right: -100%;
-    margin-left: 0;
-    clear: none;
-  }
-}
-
-/* line 146, ../_scss/_sso-styles.scss */
-.sso-links {
-  width: 100%;
-  float: right;
-  margin-left: 0;
-  margin-right: 0;
-  clear: none;
-  overflow: hidden;
-  *zoom: 1;
-  font-size: 0.75em;
-  margin: 0;
-}
-@media (min-width: 321px) {
-  /* line 146, ../_scss/_sso-styles.scss */
-  .sso-links {
-    width: 74.4186%;
-    float: right;
-    margin-left: 0;
-    margin-right: 0;
-    clear: none;
-  }
-}
-/* line 154, ../_scss/_sso-styles.scss */
-.sso-links li {
-  margin-bottom: 0;
-}
-
-/* line 159, ../_scss/_sso-styles.scss */
-article {
-  background: #fff;
-  box-shadow: 0 1px 1px #347bad;
-  padding: 1em;
-}
-
-/* line 165, ../_scss/_sso-styles.scss */
-.sp-news {
-  background: rgba(204, 204, 204, 0.15);
-  padding: 0.5em;
-  margin-top: 2em;
-  -moz-border-radius: 3px;
-  -webkit-border-radius: 3px;
-  border-radius: 3px;
-}
-/* line 170, ../_scss/_sso-styles.scss */
-.sp-news p {
-  font-size: 0.75em;
-}
-/* line 173, ../_scss/_sso-styles.scss */
-.sp-news h3 {
-  font-size: 1em;
-  margin-top: 0;
-}
-
-/* line 179, ../_scss/_sso-styles.scss */
-.loading i {
-  font-size: 4em;
-  margin: 1em 45%;
-}
-
-/* line 184, ../_scss/_sso-styles.scss */
-.error {
-  background: repeating-linear-gradient(45deg, #0a0007, #0a0007 0.5em, #240017 0.5em, #240017 1em);
-  color: #ff00a5;
-  padding: 1em;
-  margin-bottom: 1em;
-  -moz-border-radius: 3px;
-  -webkit-border-radius: 3px;
-  border-radius: 3px;
-}
-/* line 190, ../_scss/_sso-styles.scss */
-.error h1 {
-  color: #ff00a5;
-}
-
-/* line 195, ../_scss/_sso-styles.scss */
-.alert {
-  background: #ffff00;
-  color: #0055a6;
-  padding: 1em;
-  margin-bottom: 1em;
-  -moz-border-radius: 3px;
-  -webkit-border-radius: 3px;
-  border-radius: 3px;
-}
-/* line 201, ../_scss/_sso-styles.scss */
-.alert h1 {
-  color: #0055a6;
-  margin: 0;
-}
-
-/* line 207, ../_scss/_sso-styles.scss */
-footer[role="contentinfo"] {
-  position: absolute;
-  bottom: 0;
-  height: 2em;
-  width: 100%;
-  background: #0055a6;
-  border-top: 1px solid #002140;
-  padding: 0.5em;
-  color: #cccccc;
-}
-/* line 216, ../_scss/_sso-styles.scss */
-footer[role="contentinfo"] p {
-  width: 48em;
-  margin: 0 auto;
-  font-size: 0.75em;
-}
-/* line 221, ../_scss/_sso-styles.scss */
-footer[role="contentinfo"] a {
-  text-decoration: none;
-  color: #fff;
-}
-/* line 224, ../_scss/_sso-styles.scss */
-footer[role="contentinfo"] a:visited {
-  color: #fff;
-}
-/* line 227, ../_scss/_sso-styles.scss */
-footer[role="contentinfo"] a:hover, footer[role="contentinfo"] a:focus {
-  color: #ffff00;
-  text-decoration: underline;
-}
-
-/* line 234, ../_scss/_sso-styles.scss */
-.non-human {
-  float: right;
-}
