--- a/css/ucla-logon.css
+++ b/css/ucla-logon.css
@@ -577,34 +577,35 @@ section[role="main"] {
 .sp-news {
   background: rgba(204, 204, 204, 0.15);
   padding: 0.5em;
-  margin-top: 2em;
+  width: 36em;
+  margin: 1em auto 0;
   -moz-border-radius: 3px;
   -webkit-border-radius: 3px;
   border-radius: 3px;
 }
-/* line 163, ../_scss/_sso-styles.scss */
+/* line 164, ../_scss/_sso-styles.scss */
 .sp-news p {
   font-size: 0.75em;
 }
-/* line 166, ../_scss/_sso-styles.scss */
+/* line 167, ../_scss/_sso-styles.scss */
 .sp-news h3 {
   font-size: 1em;
   margin-top: 0;
 }
 
-/* line 172, ../_scss/_sso-styles.scss */
+/* line 173, ../_scss/_sso-styles.scss */
 .loading i {
   margin: 1em auto 0;
   font-size: 4em;
   margin: 1em 45%;
 }
 
-/* line 178, ../_scss/_sso-styles.scss */
+/* line 179, ../_scss/_sso-styles.scss */
 .error ~ #sso, .alert ~ #sso, .error ~ article, .alert ~ article {
   margin-top: -1em;
 }
 
-/* line 182, ../_scss/_sso-styles.scss */
+/* line 183, ../_scss/_sso-styles.scss */
 .error {
   width: 40em;
   background: repeating-linear-gradient(45deg, #0a0007, #0a0007 0.5em, #240017 0.5em, #240017 1em);
@@ -615,13 +616,13 @@ section[role="main"] {
   -webkit-border-radius: 3px;
   border-radius: 3px;
 }
-/* line 189, ../_scss/_sso-styles.scss */
+/* line 190, ../_scss/_sso-styles.scss */
 .error h1 {
   color: #ff00a5;
   padding-bottom: 1em;
 }
 
-/* line 195, ../_scss/_sso-styles.scss */
+/* line 196, ../_scss/_sso-styles.scss */
 .alert {
   width: 40em;
   background: #ffff00;
@@ -632,12 +633,12 @@ section[role="main"] {
   -webkit-border-radius: 3px;
   border-radius: 3px;
 }
-/* line 202, ../_scss/_sso-styles.scss */
+/* line 203, ../_scss/_sso-styles.scss */
 .alert h1 {
   color: #0055a6;
 }
 
-/* line 207, ../_scss/_sso-styles.scss */
+/* line 208, ../_scss/_sso-styles.scss */
 article {
   background: #fff;
   box-shadow: 0 1px 1px #347bad;
@@ -646,7 +647,7 @@ article {
   padding: 1em;
 }
 
-/* line 215, ../_scss/_sso-styles.scss */
+/* line 216, ../_scss/_sso-styles.scss */
 footer[role="contentinfo"] {
   position: absolute;
   bottom: 0;
@@ -657,28 +658,28 @@ footer[role="contentinfo"] {
   padding: 0.5em;
   color: #cccccc;
 }
-/* line 224, ../_scss/_sso-styles.scss */
+/* line 225, ../_scss/_sso-styles.scss */
 footer[role="contentinfo"] p {
   width: 48em;
   margin: 0 auto;
   font-size: 0.75em;
 }
-/* line 229, ../_scss/_sso-styles.scss */
+/* line 230, ../_scss/_sso-styles.scss */
 footer[role="contentinfo"] a {
   text-decoration: none;
   color: #fff;
 }
-/* line 232, ../_scss/_sso-styles.scss */
+/* line 233, ../_scss/_sso-styles.scss */
 footer[role="contentinfo"] a:visited {
   color: #fff;
 }
-/* line 235, ../_scss/_sso-styles.scss */
+/* line 236, ../_scss/_sso-styles.scss */
 footer[role="contentinfo"] a:hover, footer[role="contentinfo"] a:focus {
   color: #ffff00;
   text-decoration: underline;
 }
 
-/* line 242, ../_scss/_sso-styles.scss */
+/* line 243, ../_scss/_sso-styles.scss */
 .non-human {
   float: right;
 }
